@@ -22,7 +22,7 @@ fi
 # config items
 alias unbound-control="0sbindir0/unbound-control"
 alias dnssec-trigger-control="0sbindir0/dnssec-trigger-control"
-alias pidof="0sbindir0/pidof"
+alias pidof="0pidof0"
 alias nmcli="0bindir0/nmcli"
 
 state_dir="/var/run/dnssec-trigger"
